# openapi_server_sample

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
openapi_server_sample/: generate.py  main.py
