[tool.poetry]
name = "openapi-server-sample"
version = "0.1.0"
description = ""
authors = ["TATSUMI Soichiro <soichiro.tatsumi@heartbeats.jp>"]
readme = "README.md"
packages = [{include = "openapi_server_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pip-licenses = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
